
package InterfaceDesign;

public interface Asset 
{
    public double getAssetValue();
}
