@startuml
abstract class InheritanceDesign.Asset
abstract class InheritanceDesign.Property
abstract class InheritanceDesign.Security
annotation java.lang.Override
class InheritanceDesign.BankAccount
class InheritanceDesign.Bond
class InheritanceDesign.Car
class InheritanceDesign.House
class InheritanceDesign.Stock
class InheritanceDesign.Wealth
InheritanceDesign.Property --|> InheritanceDesign.Asset
InheritanceDesign.Property ..> java.lang.Override
InheritanceDesign.Security --|> InheritanceDesign.Asset
InheritanceDesign.BankAccount --|> InheritanceDesign.Asset
InheritanceDesign.BankAccount ..> java.lang.Override
InheritanceDesign.Bond --|> InheritanceDesign.Security
InheritanceDesign.Bond ..> java.lang.Override
InheritanceDesign.Car --|> InheritanceDesign.Property
InheritanceDesign.Car ..> java.lang.Override
InheritanceDesign.House --|> InheritanceDesign.Property
InheritanceDesign.House ..> java.lang.Override
InheritanceDesign.Stock --|> InheritanceDesign.Security
InheritanceDesign.Stock ..> java.lang.Override
InheritanceDesign.Wealth ..> java.lang.Override
@enduml